@@ -9,8 +9,11 @@
 * Fix bug in join rules whose qualifiers reference collections defined inside
   imported modules (#301)
 * Fix regression in file_reader collections (#304)
-* Rename lset#apply_monotone to lset#apply. Also, allow #apply to take either
+* Rename lmap#apply_monotone to lmap#apply. Also, allow #apply to take either
   monotone functions or morphisms, and improve error reporting.
+* Add lmap#filter. This takes an lmap whose values are elements of the lbool
+  lattice and returns an lmap containing only those k/v pairs where the value is
+  true.
 * Optimize notin self joins
 
 == 0.9.6 / 2013-02-25
